kubernetes/flask-stamp.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: stamp-webapp
  namespace: timestamps-namespace
  labels:
    app: stamp-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stamp-webapp
  template:  
    metadata:
      labels: 
        app: stamp-webapp
    spec:
      containers:
        - name: stamp-webapp
          image: kagboola/bola_timestamps:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 5000           
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 2000m
