kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stamp-webapp
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: stamp-webapp
              servicePort: 5000
